unpackaged/main/default/objects/A1_TrackerAPI_creds__mdt/A1_TrackerAPI_creds__mdt.object-meta.xml
<CustomObject>
    <description>Holds credentials for Agil1&#39;s tracker API.</description>
    <label>A1 TrackerAPI creds</label>
    <pluralLabel>A1 TrackerAPI creds</pluralLabel>
</CustomObject>