unpackaged/main/default/objects/A1_TrackerAPI_creds__mdt/fields/Base64__c.field-meta.xml
<CustomField>
    <fullName>Base64__c</fullName>
    <label>Base64</label>
    <length>80</length>
    <type>Text</type>
</CustomField>