unpackaged/main/default/objects/A1_TrackerAPI_creds__mdt/fields/BrandId__c.field-meta.xml
<CustomField>
    <fullName>BrandId__c</fullName>
    <label>BrandId</label>
    <length>4</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>