unpackaged/main/default/objects/A1_TrackerAPI_creds__mdt/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <label>Username</label>
    <length>40</length>
    <type>Text</type>
</CustomField>