unpackaged/main/default/objects/A1_TrackerAPI_creds__mdt/listViews/all_fields.listView-meta.xml
<ListView>
    <fullName>all_fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>BrandId__c</columns>
    <columns>TenantId__c</columns>
    <columns>Username__c</columns>
    <columns>Password__c</columns>
    <columns>Base64__c</columns>
    <filterScope>Everything</filterScope>
    <label>all fields</label>
</ListView>